fixed horizontal scroll

--- a/src/app.css
+++ b/src/app.css
@@ -66,7 +66,9 @@ html {
   scroll-behavior: smooth !important;
 
 }
-
+body{
+  overflow-x:hidden;
+}
 ::-webkit-scrollbar-track {
   margin-top: 3.95rem;
   border-top: 2px solid #1c1c1c;
